src/test/deca/context/valid/created/sans_objet/decl_float_rule.deca
// Règles attendues (occurences dans lignes du fichier résultat):
// Program 24:0
//     ListDeclClass
//     Main 24:0 
//         ListDeclVar
//             DeclVar 25:10
//                 Identifier 25:4
//                 float
//                 Identifier 25:10
//                 float 25:10
//                 Initialization 25:16
//                     Float 25:16
//                     float 
//         ListInst
//
// Auteur: Carmel
//
// Historique:
//    cree le 14/01/2024
//
// Description:
//    test de programme syntaxiquement correct.

{
    float dec = 1.2;
}