src/test/deca/context/invalid/created/rule0.2/unknow_type.deca
// Résultat erreur:
//    15:4
//    identificateur de type inconnu (règle 0.2)
//
// Description:
//    tests de programme incorrect contextuellement (identificateur de type inconnu)
//
// Auteur:
//    Jerome
//
// Historique:
//    cree le 13/01/2024

{
    intt i ;
}